till the tailwind setup and login, header components

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,12 @@
+@import "tailwindcss";
+
+
 :root {
     --light: 239, 236, 227;
     --secondary: 143, 171, 212;
     --primary: 74, 112, 169;
     --dark: 0, 0, 0;
 }
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 .content-container {
     padding: 1rem 7rem;
