--- a/frontend/src/components/sections/style/UserLoginRegisterForm.scss
+++ b/frontend/src/components/sections/style/UserLoginRegisterForm.scss
@@ -1,7 +1,6 @@
 .login-register-form {
     .content {
-        width: 900px;
-        height: 600px;
+        width: 1000px;
         // background-color: red;
         margin: auto;
         padding: 3rem;
@@ -24,7 +23,7 @@
             .slider {
                 width: 50%;
                 height: 100%;
-                background: linear-gradient(0deg,rgba(var(--dark), .75), rgba(var(--dark), .45)), url("../../../assets/media/slider-bg-image.jpg");
+                background: linear-gradient(0deg,rgba(var(--dark), .75), rgba(var(--dark), .45)), url("../../../asset/media/coorporate building.jpg");
                 background-position: center center;
                 background-size: cover;
                 position: absolute;
